deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:


        - envFrom:

            - secretRef:
                name: api-secrets

          image: gcr.io/pgtm-jlong/api
          imagePullPolicy: Always
          name: api

          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/readiness

          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 120
            httpGet:
              port: 8080
              path: /actuator/health/liveness

          ports:
            - containerPort: 8080

          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "2Gi"
