deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "api-certificate"
    kubernetes.io/ingress.global-static-ip-name: "bootiful-podcast-api-ip"
  name: api-ingress
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 80
